--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
-    "emmet.includeLanguages": {
-        "javascript": "javascriptreact"
-      },
-      "emmet.triggerExpansionOnTab": true
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact"
+  },
+  "emmet.triggerExpansionOnTab": true,
+  "liveServer.settings.port": 5501
 }
